spade-tests/src/snapshots/spade_tests__hir_lowering__tests__non_const_memory_elements_is_error.snap
---
source: spade-tests/src/hir_lowering.rs
---
use std::mem::clocked_memory_init;
use std::mem::read_memory;

entity test(clk: clock, a: int<8>) -> int<8> {
    // lifeguard spade#151
    let idx: int<1> = 0;
    let mem = inst clocked_memory_init(clk, [(false, idx, 0)], [a, a]);
    inst read_memory(mem, 0)
}


error: Memory initial values must be known at compile time
  ┌─ testinput:7:64
  │
7 │     let mem = inst clocked_memory_init(clk, [(false, idx, 0)], [a, a]);
  │                                                                ^^^^^^
  │                                                                ││
  │                                                                │This subexpression cannot be computed at compile time
  │                                                                Value not known at compile time


